tests/NormalTests/paczka1/fuzzy1/12953717.err
Error in line 3: nY1P S579 35,3
Error in line 5: wtIl S770 84,9
Error in line 9: wtIl S360 85,1
Error in line 16: nY1P S936 30,2
